log
Fri Mar 18 14:31:15 UTC 2022: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
41c8a01
Fri Mar 18 14:42:12 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|5
total_score: 15/70
4a230e8
Fri Mar 18 14:42:54 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0079ed2
Fri Mar 18 14:44:24 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
be552ce
Fri Mar 18 14:46:02 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
76a864a
Fri Mar 18 14:46:16 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
87c355a
Fri Mar 18 14:46:47 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
879e7cd
Fri Mar 18 15:00:32 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:77:27: error: expected expression before ‘void’
   Node* nodo_= createNode(void* data);
                           ^~~~
list.c:77:9: error: variable ‘nodo_’ set but not used [-Werror=unused-but-set-variable]
   Node* nodo_= createNode(void* data);
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
29f1ff1
Fri Mar 18 15:00:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:77:9: error: variable ‘nodo_’ set but not used [-Werror=unused-but-set-variable]
   Node* nodo_= createNode(data);
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e58e975
Fri Mar 18 15:05:53 UTC 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
4ee60b6
Fri Mar 18 15:06:32 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
f6d87cc
Fri Mar 18 15:07:31 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60ebc84
Fri Mar 18 15:09:49 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
21783f8
Fri Mar 18 15:10:49 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2a38e5e
